# ocickle-deals

landing-page/: index.html
landing-page-backend/: .gitignore  pyproject.toml  requirements.txt
landing-page-backend/app/: __init__.py  config.py  errors.py  extensions.py  models.py  routes.py
landing-page-backend/migrations/versions/: b0655850fcf0_initial_migration.py
landing-page/static/js/: calc.js  main.js
landing-page/static/styles/: styles.css
